--- a/frontend/electron/package.json
+++ b/frontend/electron/package.json
@@ -9,7 +9,8 @@
     "preview": "yarn copy && yarn electron",
     "app:dir": "electron-builder --dir",
     "app:dist": "electron-builder",
-    "build": "yarn copy && yarn app:dist"
+    "build": "yarn copy && yarn app:dist",
+    "start": "yarn preview && yarn dev"
   },
   "devDependencies": {
     "electron": "^21.0.0",
@@ -23,7 +24,17 @@
     "typescript-cubic-spline": "^1.0.1"
   },
   "build": {
-    "appId": "your.id",
+    "appId": "com.example.mygame",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "dist/**/*",
+      "main.js"
+    ],
+    "win": {
+      "target": "nsis"
+    },
     "mac": {
       "category": "your.app.category.type"
     }
