Fixed bugs + electron

--- a/frontend/electron/package.json
+++ b/frontend/electron/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "copy": "yarn --cwd ../client build && node ./scripts/copy-from-client.js",
     "electron": "electron .",
-    "dev": "yarn --cwd ../client dev --host & yarn electron",
+    "dev": "yarn --cwd ../client dev --host",
     "preview": "yarn copy && yarn electron",
     "app:dir": "electron-builder --dir",
     "app:dist": "electron-builder",
